<resources>
    <string name="app_name">Multiplication</string>
    <string name="mode_2">Mode 2</string>
    <string name="mode_1">Mode 1</string>
    <string name="v_lkommen_till_multiplikationstr_naren">Välkommen till multiplikationstränaren</string>
    <string name="question_is_put_here">question is put here</string>
    <string name="answer">Answer</string>
    <string name="textview">TextView</string>
    <string name="specify_number">Specify number</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="_5_5_r_tt">5/5 rätt!</string>
    <string name="new_game">New Game</string>
    <string name="ange_valfri_tabell">Ange valfri tabell</string>
    <string name="choose_table">TextView</string>
    <string name="v_lj_multiplikationstabell">Välj Multiplikationstabell</string>
    <string name="svar">Svar</string>
    <string name="spela_igen">Spela igen</string>
    <string name="spell_ge_2">Spelläge 2</string>
    <string name="spell_ge_1">Spelläge 1</string>
</resources>
